Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108693

[EVR] Crash on D3DPresentEngine::makeVideoFrame

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.2
    • 6.3.2
    • Multimedia
    • None
    • Windows
    • 365ef2fcc (dev), c39093416 (6.4), 8620dab32 (6.5)

    Description

      I found this among our user's crash reports on AppCenter.
      Unfortunately I can't reproduce this locally, and have only stack

      Unhandled exception thrown: read access violation.
      this->**d** was 0x21900000000.
      

      Stack:

       	Qt6Gui.dll!QSurfaceFormat::stencilBufferSize() Line 494	C++
      >	Qt6Multimedia.dll!D3DPresentEngine::makeVideoFrame(IMFSample * sample) Line 587	C++
       	Qt6Multimedia.dll!EVRCustomPresenter::presentSample(IMFSample * sample) Line 1906	C++
       	Qt6Multimedia.dll!EVRCustomPresenter::event(QEvent * e) Line 1874	C++
       	Qt6Widgets.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3352	C++
       	Qt6Widgets.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3304	C++
       	Qt6Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1067	C++
       	[Inline Frame] Qt6Core.dll!QCoreApplication::sendEvent(QObject *) Line 1483	C++
       	Qt6Core.dll!QCoreApplicationPrivate::sendPostedEvents(QObject * receiver, int event_type, QThreadData * data) Line 1845	C++
       	Qt6Gui.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 80	C++
       	Qt6Core.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 476	C++
       	Qt6Gui.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 73	C++
       	[Inline Frame] Qt6Core.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag>) Line 136	C++
       	Qt6Core.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 218	C++
       	Qt6Core.dll!QCoreApplication::exec() Line 1388	C++
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              artemiy Artem Dyomin
              studiosus Vladimir Belyavsky
              Votes:
              3 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes